# revkit

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  gateway.sh  pyproject.toml  requirements.txt
.claude/commands/: analyze.md  batch-analyze.md  compare.md  decompile.md  firmware-scan.md  malware-scan.md  mobile-audit.md  pe-audit.md  protocol-scan.md  security-scan.md  vuln-scan.md
.claude/skills/: SKILL.md
.revkit/scripts/automation/: _helpers.py  batch_report.py  compare_binaries.py  extract_iocs.py  firmware_analysis.py  full_analysis.py  malware_analysis.py  mobile_audit.py  report_generator.py  security_audit.py  vuln_research.py  windows_analysis.py
docs/: README-Config.md  README-Gateway.md  README-IDA.md  README-JEB.md  README-Logging.md  README-RPC.md  README-Remote.md  README-Security.md  README-Setup.md
docs/tutorials/: 01-first-ida-analysis.md  03-binary-comparison.md  04-batch-analysis.md  05-type-system.md  06-annotations-snapshots.md  08-jeb-exec-scripts.md  09-rpc-automation.md  10-add-cli-command.md  14-remote-analysis.md  15-gateway-management.md  16-security-multi-instance.md  README.md
docs/tutorials/tutorials/: 00-install-setup.md  02-first-jeb-analysis.md  06-annotations-snapshots.md  07-ida-exec-scripts.md  11-add-rpc-handler.md  12-gateway-setup.md  13-ai-agent-analysis.md  README.md
revkit/tests/: conftest.py
revkit/tests/test_cli/: test_main.py  test_remote.py
revkit/tests/test_core/: test_audit.py  test_config.py  test_instance.py  test_output.py  test_process.py  test_registry.py  test_rpc.py  test_utils.py
(+121 files in other folders)
